# mistral-mcp-temporal-logfire

./: .env.test  .gitignore  Makefile  README.md  config.py  logger.py  pyproject.toml  test_mcp.ipynb
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: tests.yaml
agents/: agents_params.py  base.py  evals.py
api/: agents.py  main.py
examples/: evals.py  main.py  report.md  test_mcp.ipynb  web_search_results.txt
examples/.deepeval/: .deepeval_telemetry.txt
mcp_server/: financial_research_server.py  main.py  prices_analysis_server.py
models/: agents.py  structured_output.py
tasks/: activities.py  worker.py
tasks/activities/: financial_agents.py
tasks/utils/: common.py  retry_llm_call.py
tasks/workflows/: financial_agents.py
tests/: test_base.py  test_structured_output.py
