[project]
name = "mistral-mcp-temporal-logfire"
version = "0.1.0"
description = "Example how to build production-ready agents using MCP, Temporal and Mistral AI SDK"
readme = "README.md"
requires-python = "==3.13.1"
authors = [{ name = "Mohamed Amri", email = "amri369@gmail.com"}]

dependencies = [
    "fastapi==0.115.8",
    "logfire==4.3.6",
    "mcp[cli]>=1.12.4",
    "mistralai>=1.9.11",
    "pydantic==2.11.7",
    "pytest==8.3.3",
    "ruff==0.12.8",
    "temporalio==1.16.0",
    "uvicorn==0.35.0",
]

[tool.uv.workspace]
members = ["mistral-mcp-temporal-logfire"]
